<resources>
    <string name="app_name">Violence Reporting Application</string>
    <string name="fake_app_name">RSS Feed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_sign_in">Sign in</string>
    <string name="dont_have_an_account">Don\'t have an account? Register</string>
    <string name="transition_profile_image">image_profile</string>
    <string name="action_settings">Settings</string>
    <string name="label_welcome_back">Welcome back</string>
    <string name="transition_email">edit_email</string>
    <string name="hint_login_email">Email or username</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="forgot_password">Forgot your password? Recover your account</string>
    <string name="error_need_to_fill_in">You need to fill this in</string>
    <string name="action_fake_to_real_app"/>
    <string name="action_report">Report</string>
    <string name="action_connect">Conect with others</string>
    <string name="action_recent_uploads">Recent uploads</string>
    <!-- hints based on sara -->
    <string name="hint_type_of_incident">Type of incident</string>
    <string name="hint_who_did_the_incident_happen_to">Who did the incident happen to?</string>
    <string name="hint_australia_state_or_territory">Australian state or territory</string>
    <string name="hint_address_or_location_of_the_incident">Address or location of the incident</string>
    <string name="hint_when_the_incident_took_place">When the incident took palce</string>
    <string name="hint_offender_name">Offender name</string>
    <string name="hint_offender_address">Offender address</string>
    <string name="hint_offender_gender">Offender gender</string>
    <string name="hint_offender_eye_color">Offender eye colour</string>
    <string name="hint_offender_hair_color">Offender hair colour</string>
    <string name="hint_other">Other</string>
    <string name="description_more">More</string>
    <string name="description_empty">Empty</string>

    <string name="hint_offender_appearance">Offender appearance</string>
    <string name="hint_offender_height">Offender height</string>
    <string name="hint_remember_anything_else_offender">Is there anything else you remember about the offender</string>

    <string name="hint_what_happened">Tell us what happened</string>
    <string name="hint_told_anyone">Have you told anyone</string>
    <string name="hint_photo">Attach media</string>
    <string name="hint_submit">Submit</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>

</resources>
