<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:id="@+id/layout_login"
    tools:context=".SignInActivity">
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_bar_default"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/login_activity_horizontal_margin"
        android:paddingRight="@dimen/login_activity_horizontal_margin"
        android:paddingBottom="@dimen/login_activity_vertical_margin"
        android:paddingTop="@dimen/login_activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:id="@+id/progress_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:foregroundGravity=""
                android:layout_gravity="center"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_welcome_back"
                    android:id="@+id/text_welcome_back"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_gravity="center_horizontal" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textAlignment="viewStart">

                    <AutoCompleteTextView
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_login_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:nextFocusDown="@+id/input_password"
                        android:transitionName="@string/transition_email"
                        tools:text="Patrick Shaw"
                        android:textAlignment="viewStart"
                        android:gravity="start" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:transitionName="input_password"
                    android:gravity="start"
                    android:textAlignment="viewStart">

                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:transitionName="input_password"
                        tools:text="password"
                        android:textAlignment="viewStart"
                        android:gravity="start" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:textAllCaps="false"
                    android:layout_marginTop="16dp"

                    android:transitionName="button_sign_up_sign_in"
                    style="@style/Widget.AppCompat.Button.Colored" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account"
                    android:id="@+id/text_no_account"
                    android:layout_marginTop="@dimen/layout_padding"
                    android:layout_gravity="center_horizontal"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:id="@+id/text_forgot_password"
                    android:layout_marginTop="@dimen/layout_padding"
                    android:layout_gravity="center_horizontal"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
